[package]
name = "ava"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_egui = "0.21.0"
bevy_pancam = { version = "0.9.0", features = ["bevy_egui"]}
bevy_prototype_debug_lines = "0.11.1"
bevy_rapier2d = "0.22.0"
kd-tree = "0.5.1"
rand = "0.8.5"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
